--- a/src/components/Persons/Person/Person.css
+++ b/src/components/Persons/Person/Person.css
@@ -1,8 +1,15 @@
-/* .Person {
+.Person {
     width: 60%;
     margin: auto;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     padding: 16px;
     text-align: center;
-} */
+}
+
+@media (min-width: 500px) {
+    .Person {
+        margin-bottom: 10px;
+        width: 450px;
+    }
+}
